tdf#154269 - Respect FindReplaceRememberedSearches expert option in quick find

Change-Id: I88c1bed647bf6f77953ccd9921e515c1246fa96f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150273
Tested-by: Jenkins
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>